<resources>
  <string name="app_name">FestivAlarm</string>
  <string name="fondo_login_string_name">Fondo login</string>
  <string name="textoLoginBtn">Iniciar Sesión</string>
  <string name="textoResetPassBtn">¿Olvidaste la contraseña?</string>
  <string name="textoSignUpBtn">Registrarse</string>
  <string name="logoAppText">Logo App</string>
  <string name="createAccountTitleText">Regístrate</string>
  <string name="createAccountText">Ingresa los datos requeridos para registrarte</string>
  <string name="resetPassText">Recuperar contraseña</string>
  <string name="inviteMemberText">Invitar Miembro</string>
  <string name="textoInviteMember">Invitar</string>
  <string name="textoRegisterMember">Regresar</string>
</resources>
